--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Validate HTML
-        uses: Cyb3r-Jak3/htmlhint-action@v1
+        uses: Cyb3r-Jak3/html5validator-action@v7.2.0
+        with:
+          root: .
 
   deploy:
     runs-on: ubuntu-latest
